syntax = "proto3";

package roles;

service RolesService {
  rpc CreateRole (CreateRoleWrapper) returns (Role);
  rpc FindAll (RequestMetadata) returns (RoleList);
  rpc GetRolesTree (RequestMetadata) returns (RoleTreeResponse);
  rpc FindOne (FindOneRoleWrapper) returns (Role);
  rpc UpdateRole (UpdateRoleWrapper) returns (Role);
}

message Role {
  string id = 1;
  string name = 2;
  string tenantId = 3;
  string userId = 4;
  string parent = 5;
  repeated Role children = 6;
  string createdAt = 7;
  string updatedAt = 8;
}

message RoleList {
  repeated Role items = 1;
}

message RoleTree {
  string id = 1;
  string name = 2;
  repeated RoleTree children = 3;
  string createdAt = 4;
  string updatedAt = 5;
}

message RoleTreeResponse {
  repeated RoleTree items = 1;
}

message CreateRole {
  string name = 1;
  string parent = 2;
}

message UpdateRole {
  string roleId = 1;
  string name = 2;
  string parent = 3;
}

message FindOneRole {
  string roleId = 1;
}

message RequestMetadata {
  string tenantId = 1;
  string userId = 2;
}

message CreateRoleWrapper {
  CreateRole body = 1;
  RequestMetadata metadata = 2;
}

message UpdateRoleWrapper {
  UpdateRole body = 1;
  RequestMetadata metadata = 2;
}

message FindOneRoleWrapper {
  FindOneRole body = 1;
  RequestMetadata metadata = 2;
}